--- a/report/delivery_challan_template.xml
+++ b/report/delivery_challan_template.xml
@@ -1,115 +1,136 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
 
+    <template id="delivery_layout">
+        <div class="header o_clean_header">
+            <div class="row">
+                <div class="row" style="text-align:center">
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+        </div>
+        <div class="article">
+            <t t-raw="0"/>
+        </div>
+    </template>
+
     <template id="report_delivery_document">
-        <t t-call="web.external_layout">
-            <t class="page">
-                <table class="table table-condensed mt48">
+        <t t-call="subcontract.delivery_layout">
+            <style>
+                td{
+                border-left: 1px solid black;
+                border-right: 1px solid black;
+                border-bottom: 1px solid black;
+                border-top: 1px solid black;
+                }
+                tr{
+                border-left: 1px solid black;
+                border-right: 1px solid black;
+                border-bottom: 1px solid black;
+                border-top: 1px solid black;
+                }
+                tr.tr-new {
+                border-left: 1px solid black;
+                border-right: 1px solid black;
+
+                border-top: 1px solid black;
+                }
+            </style>
+            <t t-foreach="datas" t-as='val'>
+                <div class="page">
                     <div class="oe_structure"/>
-                    <div>
-                        <t t-foreach="datas" t-as='val'>
-                            <div class="row">
-                                <div class="col-xs-12">
-                                    <h2>Delivery Challan for # : <span t-esc="val['picking_id']"/></h2>
-                                </div>
-                                <div class="col-xs-12">
-                                    <h2></h2>
-                                </div>
-                                <div class="col-xs-12">
-                                    <strong>Source Location:</strong>
-                                    <span t-esc="val['source_vendor']"/><br/>
-                                    <strong>Address:</strong>
-                                    <span t-esc="val['source_location']"/><br/>
-                                    <strong>GST:</strong>
-                                    <span t-esc="val['source_gst']"/>
-                                </div>
-                                <div class="col-xs-12">
-                                    <h2></h2>
-                                </div>
-                                <div class="col-xs-12">
-                                    <strong>Destination Location:</strong>
-                                    <span t-esc="val['dest_vendor']"/><br/>
-                                    <strong>Address: </strong>
+                    <div class="row" style="text-align:center">
+                        <table width="100%">
+                            <tr>
+                                <td style="padding:3px" colspan="6">
+                                    <strong><p style="text-align:center;">JOB WORK CHALLAN</p></strong>
+                                </td>
+                                <td style="padding:3px" colspan="6">
+                                    <strong><p style="text-align:center;">Original</p></strong>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="6" style="padding:3px;height:50px;">
+                                    <strong><p style="text-align:center;">[Made under Section 143 of Central Goods and Service Tax Act, 2017 read with Rule 55(b) of Central Goods and Services Tax Rules, 2017</p></strong>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="6">
+                                    <h1> </h1>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="padding:3px" colspan="6">
+                                    <strong><p style="text-align:center;">Name and Address of Consigner [Registered Person/Principal]</p></strong>
+                                </td>
+                                <td style="padding:3px" colspan="6">
+                                    <strong><p style="text-align:center;">Name and Address of the Job worker[Consignee]</p></strong>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="padding:3px" colspan="6">
+                                    <span t-esc="val['source_location']"/>
+                                </td>
+                                <td style="padding:3px" colspan="6">
                                     <span t-esc="val['destination_location']"/><br/>
-                                    <strong>GST:</strong>
+                                </td>
+                                <td style="padding:3px" colspan="6">
+                                    <strong><p>Place of Supply</p></strong>
+                                </td>
+                                <td style="padding:3px" colspan="6">
+                                    <strong><p> </p></strong>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="padding:3px" colspan="6">
+                                    <strong><p style="text-align:center;">GSTIN No of the Consigner [Registered Person]</p></strong>
+                                </td>
+                                <td style="padding:3px" colspan="6">
+                                    <strong><p style="text-align:center;">GSTIN No of the Job-Worker[If Registered]</p></strong>
+                                </td>
+                                <td style="padding:3px" colspan="6">
+                                    <strong><p style="text-align:center;">Vendor Code</p></strong>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="padding:3px" colspan="6">
+                                    <span t-esc="val['source_gst']"/>
+                                </td>
+                                <td style="padding:3px" colspan="6">
                                     <span t-esc="val['dest_gst']"/>
-                                </div>
-                            </div>
-                            <div class="row mt32 mb32">
-                                <div class="col-xs-3">
-                                    <strong>Create Date:</strong><br/>
-                                    <span t-esc="val['start_date']"/>
-                                </div>
-                                <div class="col-xs-3">
-                                    <strong>End Date:</strong><br/>
-                                    <span t-esc="val['end_date']"/>
-                                </div>
-                            </div>
-                        </t>
+                                </td>
+                                <td style="padding:3px" colspan="6">
+
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="padding:3px" colspan="6">
+                                    <h1></h1>
+                                </td>
+                                <td style="padding:3px" colspan="6">
+                                    <h1></h1>
+                                </td>
+                                <td style="padding:3px" colspan="6">
+                                    <h1></h1>
+                                </td>
+                                <td style="padding:3px" colspan="6">
+                                    <strong><p style="text-align:center;">CHALLAN NO</p></strong>
+                                </td>
+                                <td style="padding:3px" colspan="6">
+                                    <strong><p style="text-align:center;"></p></strong>
+                                </td>
+                            </tr>
+                        </table>
                     </div>
-                </table>
-                <table class="table table-sm o_main_table">
-                    <t t-foreach="work_id" t-as='work'>
-                        <t t-if="work['next_workorder']">
-                            <h3>Raw Materials</h3>
-                            <thead>
-                                <tr>
-                                    <th class="text-left" style="width:80%"><strong>Product</strong></th>
-                                    <th class="text-center" ><strong>Quantity</strong></th>
-                                    <th class="text-center"><strong>Unit</strong></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <t t-foreach="product_datas" t-as='val'>
-                                    <tr>
-                                        <td class="text-left">
-                                            <span t-esc="val['product_id']"/>
-                                        </td>
-                                        <td class="text-center">
-                                            <span t-esc="val['qty']" />
-                                        </td>
-                                        <td class="text-center">
-                                            <span t-esc="val['uom']"/>
-                                        </td>
-                                    </tr>
-                                </t>
-                            </tbody>
-                        </t>
-                    </t>
-                </table>
-                <table class="table table-sm o_main_table">
-                    <t t-foreach="work_id" t-as='work'>
-                        <t t-if="not work['next_workorder']">
-                            <h3>Finished Materials</h3>
-                            <thead>
-                                <tr>
-                                    <th class="text-left" style="width:80%"><strong>Product</strong></th>
-                                    <th class="text-center" ><strong>Quantity</strong></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <t t-foreach="datas" t-as='val'>
-                                    <tr>
-                                        <td class="text-left">
-                                            <span t-esc="val['finished_product']"/>
-                                        </td>
-                                        <td class="text-center">
-                                            <span t-esc="val['qty_finished_product']"/>
-                                        </td>
-                                    </tr>
-                                </t>
-                            </tbody>
-                        </t>
-                    </t>
-                </table>
+                </div>
             </t>
         </t>
     </template>
 
     <template id="report_deliveryslip">
         <t t-call="web.html_container">
-            <t t-call="subcontract.report_delivery_document" />
+            <t t-call="subcontract.report_delivery_document"/>
         </t>
     </template>
-
 </odoo>
