--- a/report/report_views.xml
+++ b/report/report_views.xml
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
+        <record id="paperformat_tax_invoice" model="report.paperformat">
+        <field name="name">Custom</field>
+            <field name="default" eval="True" />
+            <field name="format">A4</field>
+            <field name="page_height">0</field>
+            <field name="page_width">0</field>
+            <field name="orientation">Portrait</field>
+            <field name="margin_top">18</field>
+            <field name="margin_bottom">28</field>
+            <field name="margin_left">7</field>
+            <field name="margin_right">7</field>
+            <field name="header_line" eval="False" />
+            <field name="header_spacing">12</field>
+            <field name="dpi">90</field>
+       </record>
+
        <report
             string="Delivery Challan"
             id="action_report_delivery"
@@ -9,6 +25,7 @@
             name="subcontract.report_deliveryslip"
             file="subcontract.report_deliveryslip"
             print_report_name="'Delivery Challan - %s - %s' % (object.partner_id.name or '', object.name)"
+            paperformat = "subcontract.paperformat_tax_invoice"
         />
     </data>
 </odoo>
