--- a/views/subcontracting_workorder.xml
+++ b/views/subcontracting_workorder.xml
@@ -7,12 +7,18 @@
             <field name="arch" type="xml">
                 <xpath expr="//div[hasclass('oe_button_box')]" position="inside">
                     <button type="object"
+                            string="Internal Transfer"
+                            name="internal_transfer_view"
+                            class="oe_stat_button"
+                            icon="fa fa-truck"
+                            attrs="{'invisible': [('delivery_challan', '=', False)]}">
+                    </button>
+                    <button type="object"
                             string="RFQ"
-                            name="po"
+                            name="purchase_order_view"
                             class="oe_stat_button"
                             icon="fa-check-circle-o"
                             attrs="{'invisible':[('is_rfq', '=', False)]}">
-<!--                        <field name="rfq_ids" invisible="1"/>-->
                     </button>
                 </xpath>
                 <xpath expr="//header" position="inside">
@@ -33,7 +39,7 @@
                             <field name="subcontract_wo_product" domain="[('type', '=', 'service')]" attrs="{'readonly': [('state', '=', 'progress')]}"/>
                             <field name="subcontract_wo_service_cost" attrs="{'readonly': [('state', '=', 'progress')]}"/>
                             <field name="subcontract_supplier_location" attrs="{'readonly': [('state', '=', 'progress')]}"/>
-                            <field name="delivery_challan_id" string="Internal Transfer"/>
+                            <field name="delivery_challan_id" string="Internal Transfer" invisible="1"/>
                         </group>
                     </page>
                 </xpath>
